Prevent text from resizing on mobile

--- a/src/players/default/scss/_base.scss
+++ b/src/players/default/scss/_base.scss
@@ -5,6 +5,7 @@ html {
     font: menu;
     font-weight: 300;
     line-height: 1.2;
+    text-size-adjust: 100%;
 
     &.sys-ui {
         font-family: system-ui, '-apple-system', BlinkMacSystemFont;
